deploy/manifests/dev/us-east-2/lassie-event-recorder/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lassie-event-recorder
spec:
  template:
    spec:
      containers:
        - name: lassie-event-recorder
          # Image tag is set to `main` which is a tag that is reused and represents the head of main branch.
          # Therefore, pull the image every time to make sure we got the latest.
          imagePullPolicy: Always
          args:
            - '-mongoDB'
            - 'reputation'
            - '-mongoCollection'
            - 'lassie'
            - '-mongoPercent'
            - '0.01'
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: "2"
              memory: 4Gi
---
kind: Service
apiVersion: v1
metadata:
  name: lassie-event-recorder
spec:
  type: ClusterIP
  clusterIP: None
