deploy/manifests/dev/us-east-2/lassie-event-recorder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lassie-event-recorder
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: lassie-event-recorder-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication required to submit lassie events'
spec:
  tls:
    - hosts:
        - lassie-event-recorder-2.dev.cid.contact
      secretName: lassie-event-recorder-ingress-tls
  rules:
    - host: lassie-event-recorder-2.dev.cid.contact
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lassie-event-recorder
                port:
                  number: 80
